--- a/복습/2022.09.24복습(4).html
+++ b/복습/2022.09.24복습(4).html
@@ -87,6 +87,7 @@
            + stu3.toResult() +'\n'
            + stu4.toResult() +'\n'
         )
+        ///깃허브용 추가00000???
     </script>
 </body>
 </html>
